--- a/web/select2-bs5-dark.css
+++ b/web/select2-bs5-dark.css
@@ -38,3 +38,8 @@ html[data-bs-theme="dark"] .select2-container--bootstrap-5 .select2-dropdown {
 html[data-bs-theme="dark"] .select2-container--bootstrap-5 .select2-dropdown .select2-results__options .select2-results__option[role=group] .select2-results__group {
 	color: var(--bs-secondary-color)!important;
 }
+
+html[data-bs-theme="dark"] .select2-results__option.select2-results__option--highlighted {
+    color: #000;
+    background-color:grey
+}
