--- a/web/select2-bs5-dark.css
+++ b/web/select2-bs5-dark.css
@@ -1,3 +1,5 @@
+/* https://cdn.cloudycrm.net/ghcv/cdn/web/select2-bs5-dark.css?_fresh=1 */
+
 /* Select 2 bootstrap-5 theme override */
 html[data-bs-theme="dark"] .select2-container--bootstrap-5 .select2-selection {
     background-color: transparent !important;
