--- a/app7/index.css
+++ b/app7/index.css
@@ -51,3 +51,9 @@
 .autocomplete-dropdown {
     z-index: 700 !important;
 }
+
+.data-table caption {
+    text-align: left;
+    margin-left: 8px;
+    margin-top: 8px;
+}
