--- a/app7/index.css
+++ b/app7/index.css
@@ -61,3 +61,7 @@
 .accordion-item-content .media-list .item-link .item-inner:before, .accordion-item-content li.media-item .item-link .item-inner:before {
     display: inherit;
 }
+
+.doors-attachments .media-list .item-link .item-inner:before {
+    display: none;
+}
