--- a/wapp/wapp.css
+++ b/wapp/wapp.css
@@ -124,7 +124,7 @@
 }
 
 .wapp-chat a {
-    color: blue !important;
+    color: #0d6efd !important;
     text-decoration: none !important;
     cursor: pointer !important;
 }
